--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Escape Velocity</a></h1>
+							<h1><a href="index.html">Kaji Rugby</a></h1>
 							<p>A free responsive site template by HTML5 UP</p>
 						</div>
 
@@ -281,5 +281,6 @@
 	</body>
 
 </html>
+
 
 
