--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="index.html">Home</a></li>
+								<li class="current"><a href="index.html">About</a></li>
 								<li>
 									<a href="#">Dropdown</a>
 									<ul>
@@ -49,6 +49,7 @@
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="#">Contact </a></li>
 							</ul>
 						</nav>
 
@@ -281,6 +282,7 @@
 	</body>
 
 </html>
+
 
 
 
