--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style type="text/css">
+			html
+			{
+				scroll-behavior: smooth;
+			}
+		</style>
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
@@ -49,7 +55,7 @@
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
-								<li><a href="#">Contact </a></li>
+								<li><a href="#contact" class="nav-link smoothScroll">Contact </a></li>
 							</ul>
 						</nav>
 
@@ -192,7 +198,7 @@
 							<div class="col-6 col-12-medium">
 
 								<!-- Contact Form -->
-									<section>
+									<section id="#contact">
 										<form method="post" action="#">
 											<div class="row gtr-50">
 												<div class="col-6 col-12-small">
@@ -282,6 +288,7 @@
 	</body>
 
 </html>
+
 
 
 
