--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 
 <!DOCTYPE HTML>
-<!--
-	Escape Velocity by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Escape Velocity by HTML5 UP</title>
+		<title>Kaji Rugby | Sacramento</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,14 +15,14 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Escape Velocity</a></h1>
-							<p>A free responsive site template by HTML5 UP</p>
+							<h1><a href="index.html">KAJI RUGBY</a></h1>
+							<p>Demo website for the Kaji Rugby Sacramento</p>
 						</div>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="index.html">Home</a></li>
+								<li class="current"><a href="index.html">About</a></li>
 								<li>
 									<a href="#">Dropdown</a>
 									<ul>
@@ -281,3 +276,4 @@
 
 	</body>
 </html>
+
