--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
 										<li><a href="#">Nisl tempus</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
+								<li><a href="left-sidebar.html">Coaches</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="no-sidebar.html">Contact</a></li>
+								
 							</ul>
 						</nav>
 
@@ -276,4 +278,5 @@
 
 	</body>
 </html>
+
 
