--- a/index.html
+++ b/index.html
@@ -61,12 +61,14 @@
 							Escape Velocity is a free responsive<br class="mobile-hide" />
 							site template by <a href="http://html5up.net" class="nobr">HTML5 UP</a>
 						</p>
-						!--<p class="style3">It's <strong>responsive</strong>, built on <strong>HTML5</strong> and <strong>CSS3</strong>, and released for
+						<!--
+						<p class="style3">It's <strong>responsive</strong>, built on <strong>HTML5</strong> and <strong>CSS3</strong>, and released for
 						free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0 license</a>, so use it for any of
 						your personal or commercial projects &ndash; just be sure to credit us!</p>
 						<ul class="actions">
-							<li><a href="#" class="button style3 large">Proceed</a></li>--!
+							<li><a href="#" class="button style3 large">Proceed</a></li>
 						</ul>
+						-->
 					</div>
 				</section>
 
@@ -278,6 +280,7 @@
 
 	</body>
 </html>
+
 
 
 
