--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
 												<section>
 													<h3 class="icon solid fa-comment">Social</h3>
 													<p>
-														<a href="#">@untitled-corp</a><br />
-														<a href="#">linkedin.com/untitled</a><br />
+														<!-- <a href="#">@untitled-corp</a><br />
+														<a href="#">linkedin.com/untitled</a><br /> -->
 														<a href="https://www.facebook.com/groups/407299243832376/">Facebook</a>
 													</p>
 												</section>
@@ -280,6 +280,7 @@
 
 	</body>
 </html>
+
 
 
 
