--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
@@ -236,6 +238,8 @@
 														<!-- <a href="#">@untitled-corp</a><br />
 														<a href="#">linkedin.com/untitled</a><br /> -->
 														<a href="https://www.facebook.com/groups/407299243832376/">Facebook</a>
+														<i class="fa fa-facebook-f"></i>
+
 													</p>
 												</section>
 											</div>
@@ -280,6 +284,7 @@
 
 	</body>
 </html>
+
 
 
 
