--- a/index.html
+++ b/index.html
@@ -239,6 +239,9 @@
 														<a href="#">linkedin.com/untitled</a><br /> -->
 														<a href="https://www.facebook.com/groups/407299243832376/">Facebook</a>
 														<i class="fa fa-facebook-f"></i>
+														<a href="https://www.facebook.com/groups/407299243832376/" target="_blank">
+   															 <img src="facebook-icon.png" alt="Facebook Icon" width="40" height="40">
+														</a>
 
 													</p>
 												</section>
@@ -284,6 +287,7 @@
 
 	</body>
 </html>
+
 
 
 
