--- a/index.html
+++ b/index.html
@@ -242,6 +242,10 @@
 														<a href="https://www.facebook.com/groups/407299243832376/" target="_blank">
    															 <img src="./facebook-icon.png" alt="Facebook Icon" width="40" height="40">
 														</a>
+														<a href="https://www.facebook.com" target="_blank">
+    														<i class="fa fa-facebook-f" style="font-size:24px; color:#1877F2;"></i>
+														</a>
+
 
 													</p>
 												</section>
@@ -287,6 +291,7 @@
 
 	</body>
 </html>
+
 
 
 
