--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
 
 			<!-- Footer -->
 				<section id="footer" class="wrapper">
-					<div class="title">The Rest Of It</div>
+					<div class="title">JOIN THE TEAM</div>
 					<div class="container">
 						<header class="style1">
 							<h2>Ipsum sapien elementum portitor?</h2>
 							<p>
-								Sed turpis tortor, tincidunt sed ornare in metus porttitor mollis nunc in aliquet.<br />
-								Nam pharetra laoreet imperdiet volutpat etiam feugiat.
+								Stay updated with the latest news and information about the upcoming season.
+								Sign up for our mailing list to receive notifications and register for the 2025 season.
 							</p>
 						</header>
 						<div class="row">
@@ -286,6 +286,7 @@
 
 	</body>
 </html>
+
 
 
 
