--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
 					<div class="title">JOIN THE TEAM</div>
 					<div class="container">
 						<header class="style1">
-							<h2>Ipsum sapien elementum portitor?</h2>
+							<h2>REGISTRATION</h2>
 							<p>
 								Stay updated with the latest news and information about the upcoming season.
-								Sign up for our mailing list to receive notifications and register for the 2025 season.
+								Sign up for our mailing list to receive notifications and register for the 2026 season.
 							</p>
 						</header>
 						<div class="row">
@@ -286,6 +286,7 @@
 
 	</body>
 </html>
+
 
 
 
