--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 														<!-- <a href="#">@untitled-corp</a><br />
 														<a href="#">linkedin.com/untitled</a><br /> -->
 														<a href="https://www.facebook.com/groups/407299243832376/" target="_blank">
-    														<i class="fa fa-facebook-f" style="font-size:24px; color:#1877F2;"></i>
+    														<i class="fa fa-facebook-f" style="font-size:24px; color:#FFFFFF;"></i>
 														</a>
 
 
@@ -286,6 +286,7 @@
 
 	</body>
 </html>
+
 
 
 
