--- a/index.html
+++ b/index.html
@@ -239,9 +239,11 @@
 														<a href="#">linkedin.com/untitled</a><br /> -->
 														<a href="https://www.facebook.com/groups/407299243832376/" target="_blank">
     														<i class="fa fa-facebook-f" style="font-size:24px; color:#FFFFFF;"></i>
+														</a> <br />
+														<a href="https://www.instagram.com/p/DUUNV6lAZXZ/" alt="Facebook Icon" target="_blank">
+    														<i class="fa fa-facebook-f" style="font-size:24px; color:#FFFFFF;"></i>
 														</a>
-
-
+														<img src="instagram-icon.png" alt="Instagram Icon" width="40" height="40">
 													</p>
 												</section>
 											</div>
@@ -286,6 +288,7 @@
 
 	</body>
 </html>
+
 
 
 
