--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
 														<a href="https://www.instagram.com/p/DUUNV6lAZXZ/" alt="Facebook Icon" target="_blank">
     														<i class="fa fa-facebook-f" style="font-size:24px; color:#FFFFFF;"></i>
 														</a>
+														<i class="fab fa-instagram" style="font-size:30px; color:#E1306C;"></i>
 														<img src="instagram-icon.png" alt="Instagram Icon" width="40" height="40">
 													</p>
 												</section>
@@ -288,6 +289,7 @@
 
 	</body>
 </html>
+
 
 
 
