--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
 														<!-- <a href="#">@untitled-corp</a><br />
 														<a href="#">linkedin.com/untitled</a><br /> -->
 														<a href="https://www.facebook.com/groups/407299243832376/" alt="Facebook Icon" target="_blank">
-    														<i class="fa fa-facebook-f" style="font-size:24px; color:#FFFFFF;"></i>
+    														<i class="fa fa-facebook-f" style="font-size:24px; color:#1877F2;"></i>
 														</a> <br />
 														<a href="https://www.instagram.com/p/DUUNV6lAZXZ/" alt="Instagram Icon" target="_blank">
-    														<i class="fab fa-instagram" style="font-size:30px; color:#E1306C;"></i>
+    														<i class="fab fa-instagram" style="font-size:24px; color:#E1306C;"></i>
 														</a>
 													</p>
 												</section>
@@ -287,6 +287,7 @@
 
 	</body>
 </html>
+
 
 
 
