--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>Kaji Rugby | Sacramento</title>
-		<link rel="icon" type="image/x-icon" href="/images/kaji-favicon">
+		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -288,6 +288,7 @@
 
 	</body>
 </html>
+
 
 
 
